[package]
name = "egui_player"
version = "0.1.3"
edition = "2024"
exclude = [
    "assets/*",
    "examples/*",
]
repository = "https://github.com/imzacm/egui-player"
documentation = "https://docs.rs/egui_player"
license = "Unlicense"
description = "A player for rust using egui. Currently audio playback and transcription are supported"

[dependencies]
eframe = "0.33"
futures-util = "0.3.31"
infer = "0.19.0"
kalosm-sound = "0.4.0"
mp3-duration = "0.1.10"
rodio = { version = "0.20.1", features = ["symphonia-all"] }
serde = { version = "1.0.171", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
kalosm-common = "0.4.0"

[dev-dependencies]
rfd = "0.15.0"
